--- a/main.html
+++ b/main.html
@@ -7,8 +7,78 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
-    </table>
+    <table border="1" style="border-collapse: collapse; width: 100%;">
+    <tr>
+        <td>
+            <table border="1" style="border-collapse: collapse; width: 100%; height: 150px;">
+                <tr>
+                    <th>Nested Table 2</th>
+                </tr>
+                <tr>
+                    <td>
+                        <table border="1" style="border-collapse: collapse; width: 100%;">
+                            <tr>
+                                <th>Column 1</th>
+                                <th>Column 2</th>
+                            </tr>
+                            <tr>
+                                <td>abc</td>
+                                <td>def</td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+        </td>
+        <td>
+            <table border="1" style="border-collapse: collapse; width: 100%; height: 150px;">
+                <tr>
+                    <th>Nested Table 1</th>
+                </tr>
+                <tr>
+                    <td>
+                        <ul>
+                            <li>List item</li>
+                            <li>List item</li>
+                            <li>List item</li>
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <table border="1" style="border-collapse: collapse; width: 100%; height: 150px;">
+                <tr>
+                    <th>Nested Table 3</th>
+                </tr>
+                <tr>
+                    <td>
+                        <strong>Nested Table</strong>
+                    </td>
+                    <td>
+                        Demo Continued
+                    </td>
+                </tr>
+            </table>
+        </td>
+        <td>
+            <table border="1" style="border-collapse: collapse; width: 100%; height: 150px;">
+                <tr>
+                    <th>Nested Table 4</th>
+                </tr>
+                <tr>
+                    <td style="background-color: black; color: white; text-align: center;">
+                        HTML
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
+
+</body>
+</html>
   </body>
 </html>
