--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <strong>Nested Table</strong>
+                        <a href="#" style="text-decoration: underline; color: blue;">Nested Table</a>
                     </td>
                     <td>
                         Demo Continued
