--- a/main.html
+++ b/main.html
@@ -1,84 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <table border="1" style="border-collapse: collapse; width: 100%;">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Table</title>
+</head>
+<body>
+  <table border="1" style="border-collapse: collapse; width: 100%;">
     <tr>
-        <td>
-            <table border="1" style="border-collapse: collapse; width: 100%; height: 150px;">
-                <tr>
-                    <th>Nested Table 2</th>
-                </tr>
-                <tr>
-                    <td>
-                        <table border="1" style="border-collapse: collapse; width: 100%;">
-                            <tr>
-                                <th>Column 1</th>
-                                <th>Column 2</th>
-                            </tr>
-                            <tr>
-                                <td>abc</td>
-                                <td>def</td>
-                            </tr>
-                        </table>
-                    </td>
-                </tr>
-            </table>
-        </td>
-        <td>
-            <table border="1" style="border-collapse: collapse; width: 100%; height: 150px;">
-                <tr>
-                    <th>Nested Table 1</th>
-                </tr>
-                <tr>
-                    <td>
-                        <ul>
-                            <li>List item</li>
-                            <li>List item</li>
-                            <li>List item</li>
-                        </ul>
-                    </td>
-                </tr>
-            </table>
-        </td>
+      <td>
+        <!-- Nested Table 2 -->
+        <table border="1" style="border-collapse: collapse; width: 100%; height: 150px;">
+          <tr>
+            <th colspan="2">Nested Table 2</th>
+          </tr>
+          <tr>
+            <td>abc</td>
+            <td>def</td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <!-- Nested Table 1 -->
+        <table border="1" style="border-collapse: collapse; width: 100%; height: 150px;">
+          <tr>
+            <th>Nested Table 1</th>
+          </tr>
+          <tr>
+            <td>
+              <ul>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+      </td>
     </tr>
     <tr>
-        <td>
-            <table border="1" style="border-collapse: collapse; width: 100%; height: 150px;">
-                <tr>
-                    <th>Nested Table 3</th>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="#" style="text-decoration: underline; color: blue;">Nested Table</a>
-                    </td>
-                    <td>
-                        Demo Continued
-                    </td>
-                </tr>
-            </table>
-        </td>
-        <td>
-            <table border="1" style="border-collapse: collapse; width: 100%; height: 150px;">
-                <tr>
-                    <th>Nested Table 4</th>
-                </tr>
-                <tr>
-                    <td style="background-color: black; color: white; text-align: center;">
-                        HTML
-                    </td>
-                </tr>
-            </table>
-        </td>
+      <td>
+        <!-- Nested Table 3 -->
+        <table border="1" style="border-collapse: collapse; width: 100%; height: 150px;">
+          <tr>
+            <th>Nested Table 3</th>
+          </tr>
+          <tr>
+            <td>
+              <a href="#" style="text-decoration: underline; color: blue;">Nested Table</a>
+            </td>
+            <td>
+              Demo Continued
+            </td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <!-- Nested Table 4 -->
+        <table border="1" style="border-collapse: collapse; width: 100%; height: 150px;">
+          <tr>
+            <th>Nested Table 4</th>
+          </tr>
+          <tr>
+            <td style="background-color: black; color: white; text-align: center;">
+              HTML
+            </td>
+          </tr>
+        </table>
+      </td>
     </tr>
-</table>
-
+  </table>
 </body>
-</html>
-  </body>
 </html>
