--- a/main.html
+++ b/main.html
@@ -14,6 +14,10 @@
           <tr>
             <th colspan="2">Nested Table 2</th>
           </tr>
+			<tr>
+        <th>Column 1</th> <!-- The test is looking for this header -->
+        <th>Column 2</th> <!-- The test is looking for this header as well -->
+    </tr>
           <tr>
             <td>abc</td>
             <td>def</td>
